Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -61,14 +61,14 @@
       "type": "series",
       "name": "Call of the Night Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175914-VsbL90WzuqoM.jpg",
-      "description": "Genres: Comedy, Psychological, Romance, Slice of Life, Supernatural\nTags:Vampire/Urban Fantasy/Heterosexual/Male Protagonist/Urban/Coming of Age/Female Protagonist/Hikikomori/Shounen/Detective\nThe second season of <i>Yofukashi no Uta</i>.\n<br><br>\nKo overcomes his confusion about becoming a vampire and decides to \"like\" Nazuna, while Nazuna resolves to make Ko \"fall in love\" with her. Without understanding what \"love\" even is, the two of them spend their nights together in a frenzy. Meanwhile, Detective Uguisu Anko is closing in with her plot to kill vampires, not just Nazuna. A vampire's weakness is \"anything they were attached to when they were human\" and so they all try to get rid of this weakness before it's too late. But, Nazuna has no memory of her human life. What is Nazuna's hidden past? Why did Anko start killing vampires? And what is the \"secret\" that Nazuna and Anko share? For Ko, Nazuna, Anko, a fun \"late night\" doesn't end here... a new \"night\" begins!\n<br><br>\n(Source: HIDIVE)"
+      "description": "Genres: Comedy, Psychological, Romance, Slice of Life, Supernatural\nTags:Vampire/Urban Fantasy/Heterosexual/Urban/Male Protagonist/Female Protagonist/Coming of Age/Hikikomori/Shounen/Detective\nThe second season of <i>Yofukashi no Uta</i>.\n<br><br>\nKo overcomes his confusion about becoming a vampire and decides to \"like\" Nazuna, while Nazuna resolves to make Ko \"fall in love\" with her. Without understanding what \"love\" even is, the two of them spend their nights together in a frenzy. Meanwhile, Detective Uguisu Anko is closing in with her plot to kill vampires, not just Nazuna. A vampire's weakness is \"anything they were attached to when they were human\" and so they all try to get rid of this weakness before it's too late. But, Nazuna has no memory of her human life. What is Nazuna's hidden past? Why did Anko start killing vampires? And what is the \"secret\" that Nazuna and Anko share? For Ko, Nazuna, Anko, a fun \"late night\" doesn't end here... a new \"night\" begins!\n<br><br>\n(Source: HIDIVE)"
     },
     {
       "id": "tt8993398",
       "type": "series",
       "name": "Rascal Does Not Dream of Santa Claus",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171046-9leqLiNuOqNu.png",
-      "description": "Genres: Drama, Mystery, Psychological, Romance, Supernatural\nTags:College/Heterosexual/Urban Fantasy/Female Protagonist/Male Protagonist/Primarily Adult Cast/Idol/Acting/CGI/POV\nSequel to the film <i>Seishun Buta Yarou wa Randoseru Girl no Yume wo Minai</i>.\n<br><br>\n After encountering various girls going through Puberty Syndrome, Sakuta Azusagawa's high school days have come to a close, and he is now a university student. He enrolls at a university in Kanazawa-hakkei alongside his girlfriend Mai Sakurajima, a nationally famed actress. Off campus, he stumbles upon an out-of-season miniskirt Santa. Precognitive dreams, an anonymous online singer, poltergeists buzzing on social media... A mysterious tale with enigmatic phenomenons surrounding girls with wavering hearts starts again. Puberty continues...\n<br><br> \n(Source: Crunchyroll)"
+      "description": "Genres: Drama, Mystery, Psychological, Romance, Supernatural\nTags:College/Urban Fantasy/Female Protagonist/Male Protagonist/Heterosexual/Primarily Adult Cast/Idol/Acting/CGI/POV\nSequel to the film <i>Seishun Buta Yarou wa Randoseru Girl no Yume wo Minai</i>.\n<br><br>\n After encountering various girls going through Puberty Syndrome, Sakuta Azusagawa's high school days have come to a close, and he is now a university student. He enrolls at a university in Kanazawa-hakkei alongside his girlfriend Mai Sakurajima, a nationally famed actress. Off campus, he stumbles upon an out-of-season miniskirt Santa. Precognitive dreams, an anonymous online singer, poltergeists buzzing on social media... A mysterious tale with enigmatic phenomenons surrounding girls with wavering hearts starts again. Puberty continues...\n<br><br> \n(Source: Crunchyroll)"
     },
     {
       "id": "tt9529546",
@@ -81,7 +81,7 @@
       "id": "tt9679542",
       "type": "series",
       "name": "Dr. STONE SCIENCE FUTURE Cour 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx189117-EJQHOFjLoK2k.png",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx189117-TLtCXYT7JPoL.jpg",
       "description": "Genres: Action, Adventure, Comedy, Sci-Fi\nTags:Shounen/Male Protagonist/Post-Apocalyptic/Foreign/Ensemble Cast/Educational/Survival/Ships/Travel\nThe second cour of the fourth season of <i>Dr.STONE</i>.<br><br>\n"
     },
     {
@@ -166,7 +166,7 @@
       "type": "series",
       "name": "Dealing with Mikadono Sisters Is a Breeze",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178886-KjzSXyEB61zX.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Male Protagonist/Heterosexual/Tomboy/Cohabitation/Female Harem/Tsundere/School/Shounen/Shogi/Martial Arts/Acting/Coming of Age/Femboy\nYuu Ayase, son of a late legendary actress, is overwhelmingly mediocre. When he’s invited to stay with his mother’s friend, Yuu is shocked to find out that he’ll be living with three prodigy sisters who possess both beauty and talent…and who rule his new school as the Three Emperors. Can Yuu manage to melt the sisters’ cold hearts and fulfill his mother’s last wish for him to build a happy family?<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Romance\nTags:Male Protagonist/Heterosexual/Tomboy/Cohabitation/Female Harem/Tsundere/School/Shounen/Shogi/Martial Arts/Acting/Coming of Age\nYuu Ayase, son of a late legendary actress, is overwhelmingly mediocre. When he’s invited to stay with his mother’s friend, Yuu is shocked to find out that he’ll be living with three prodigy sisters who possess both beauty and talent…and who rule his new school as the Three Emperors. Can Yuu manage to melt the sisters’ cold hearts and fulfill his mother’s last wish for him to build a happy family?<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt37113118",
