--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -179,7 +179,7 @@
       "id": "tt32777700",
       "type": "series",
       "name": "Chichi wa Eiyuu, Haha wa Seirei, Musume no Watashi wa Tenseisha.",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173692-br9l8NmUvth2.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173692-shp7PGRQyCQl.jpg",
       "description": "Genres: Fantasy, Romance\nTags:Magic/Isekai\n\"I became the spirit of elements when I reincarnated?!\" Ellen is a young girl reincarnated from modern-day Japan as a half-spirit. Her father, Rovel, is the legendary hero who saved the kingdom, and her mother, Origin, is the primordial queen and ruler of all spirits. Furthermore, she herself has the overpowered ability to manipulate the elements. While looking absolutely adorable, this perfect little girl will fall back on her past life's knowledge and the power of the spirits to protect her precious family!\n<br><br>\n(Source: MANGA UP!)"
     },
     {
@@ -208,7 +208,7 @@
       "type": "series",
       "name": "The Banished Court Magician Aims to Become the Strongest",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx188487-gewgvReLVli9.jpg",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon/Male Protagonist\nnull"
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon/Male Protagonist\n\"This party does not need a useless magician who can only use support magic. You are fired, Alec Huguette.\"\n<BR><BR>\nOne day, Alec, a court magician who had been chaperoning the Crown Prince's dungeon-crawling party, was suddenly fired and banished from the court by the prince. The only one who reached out to him is Yoruha, his former party member from their Academy of Magic days, that had split up four years ago. \n<BR><BR>\n\"Hey Alec— would you like to come explore dungeons with us again?\"\n<BR><BR>\nThus the legendary \"Lasting Period\" party was revived, and the name will soon became known all over the world once again.\n<BR><BR>\n(Source: Lanove Bunko, translated)"
     },
     {
       "id": "tt37499375",
@@ -228,22 +228,15 @@
       "id": "tt32832412",
       "type": "series",
       "name": "With You, Our Love Will Make It Through",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186161-nRJptSuYKEQP.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186161-rgdRQgwOJUpb.png",
       "description": "Genres: Drama, Fantasy, Romance\nTags:Shoujo/Anthropomorphism/Heterosexual/Female Protagonist/School/Kemonomimi\nWhen high schooler Mari bumps into a fellow tardy student, she's surprised to find out he's a beastfolk who's to attend her school! After all, it's not rare for beastfolk to coexist alongside humans, but it's still uncommon, with the prejudice and all. Nervous to meet one at first, Mari soon learns there's more to him than his furry exterior. In fact, the more she gets to know him, the more she finds herself drawn to him, his steadfastness, his kindheartedness, and…his body…\n<BR><BR>\n(Source: Yen Press)"
     },
     {
       "id": "tt32856801",
       "type": "series",
       "name": "Ao no Orchestra 2nd Season",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170018-2BTcPY0K9iqy.png",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170018-1PqdLX68YayA.jpg",
       "description": "Genres: Drama, Music\nTags:Classical Music\nThe second season of <i>Ao no Orchestra</i>."
-    },
-    {
-      "id": "tt36987681",
-      "type": "series",
-      "name": "Taiyou yori mo Mabushii Hoshi",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186621-jFeAgDQkQMUm.jpg",
-      "description": "Genres: Romance\nTags:School/Shoujo/Heterosexual/Female Protagonist\nSae and Koki have been friends since childhood. One fateful day at the end of middle school, she has a revelation: Koki has grown up! Now they’re in high school, and she has another revelation: she has feelings for Koki! But Sae isn’t the only girl who does… The question is, who does Koki have feelings for?!<br><br>\n(Source: Viz)"
     },
     {
       "id": "tt37547276",
@@ -253,17 +246,24 @@
       "description": "Genres: Comedy, Slice of Life, Supernatural\nTags:Vampire/School/Male Protagonist/Female Protagonist/Kuudere/Heterosexual/Primarily Teen Cast\nLuna Ishikawa is a dark and mysterious vampire—or so she'd like her new classmates to believe. The truth is, while she may be one of the not-so-mythical bloodsuckers, she doesn't really live up to the hype. She's short and clumsy, and she can't even suck blood properly! So when her classmate Tatsuta Ootori discovers her little “drinking problem,” he can't help but lend a hand. Can he nurse Luna from the small, timid animal she is into a fearsome creature of the night?!\n<br><br>\n(Source: Yen Press)"
     },
     {
+      "id": "tt36987681",
+      "type": "series",
+      "name": "Taiyou yori mo Mabushii Hoshi",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186621-jFeAgDQkQMUm.jpg",
+      "description": "Genres: Romance\nTags:Shoujo/School/Heterosexual/Female Protagonist\nSae and Koki have been friends since childhood. One fateful day at the end of middle school, she has a revelation: Koki has grown up! Now they’re in high school, and she has another revelation: she has feelings for Koki! But Sae isn’t the only girl who does… The question is, who does Koki have feelings for?!<br><br>\n(Source: Viz)"
+    },
+    {
       "id": "tt37430949",
       "type": "series",
       "name": "A Gatherer's Adventure in Isekai",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx187663-cP1vtkFc4Idp.png",
-      "description": "Genres: Adventure, Comedy, Fantasy, Slice of Life\nTags:Male Protagonist/Isekai/Magic/Food/Elf/Dragons\nTakeru Kamishiro is an ordinary middle aged salaryman who was chosen by god to be reincarnated into a fantasy world in the body of a handsome young man in his prime. Takeru sets out to learn more about the world while gathering rare and interesting materials along the way to sell for money which he can use to gather even more materials ad infitium."
+      "description": "Genres: Adventure, Comedy, Fantasy, Slice of Life\nTags:Male Protagonist/Isekai/Magic/Food/Elf/Dragons\nTakeru Kamishiro is an ordinary middle aged salaryman who was chosen by god to be reincarnated into a fantasy world in the body of a handsome young man in his prime. Takeru sets out to learn more about the world while gathering rare and interesting materials along the way to sell for money which he can use to gather even more materials ad infitium.\n<br><br>\n<i>Note: Each episode streams 1 week early on some streaming services. The original TV broadcast starts on October 7th, 2025.</i>"
     },
     {
       "id": "tt36912922",
       "type": "series",
       "name": "Mechanical Marie",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179992-x9TXPJSg8nYY.png",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179992-tu21efjGADCO.png",
       "description": "Genres: Action, Comedy, Romance, Sci-Fi\nTags:Female Protagonist/Shoujo/Maids/Slapstick/Robots\n<i> “At last, she’s complete. This is Marie, a robot maid.”</i>\n<br><br>\nMarie, a former legendary martial artist, now conceals her identity as a human and starts working as a “robot” in the mansion of Arthur, heir to a conglomerate that despises humans. Her human identity must remain hidden—because one slip-up and she’s dead! Her naturally emotionless demeanor helps her maintain her “robot” disguise and flawlessly perform her duties, all while struggling to protect Arthur from assassins sent to take his life. She lives each day on the edge with her heart racing, because Arthur is head over heels for Marie, and her human identity is nearly exposed!<br><br>\n\nA maid pretending to be a robot x A young heir who hates humans. Get ready for a heartwarming comedy that’ll make you laugh and cry! What began as a lie between master and maid blossoms into a love neither of them saw coming.<br><br>\n\n(Source: Crunchyroll) "
     },
     {
@@ -274,18 +274,18 @@
       "description": "Genres: Comedy, Fantasy, Romance\nTags:Shoujo/Isekai/Female Protagonist\nKonoha Satou has a dark history, written throughout middle school—a fantasy adventure of love and magic about the Count’s daughter Konoha Magnolia and the knights who love her! But when it looks like that dark history is going to be uncovered by her mother, Konoha panics and dies in a traffic accident! Opening her eyes, she finds that she’s been reincarnated into the world of her own dark history as Iana Magnolia, the worst villainess of her own creation!\n<br><br>\n(Source: Yen Press)"
     },
     {
-      "id": "tt36593047",
-      "type": "series",
-      "name": "Egao no Taenai Shokuba desu.",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173523-dXMn5evjma8K.png",
-      "description": "Genres: Comedy, Slice of Life\nTags:Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Drawing/Yuri/Work/LGBTQ+ Themes\nNew shoujo manga artist Nana Futami works hard every day while being supported by Kaede Satou, her female editor who is older than her, and Mizuki Hazama, her assistant. According to the girl herself, she sometimes drums up intense daydream delusions of occupational illness! A working girls comedy set in the entertainment industry, brought to you by an author who always draws various girls. "
-    },
-    {
       "id": "tt36190100",
       "type": "series",
       "name": "Dusk Beyond the End of the World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195153-yiRxZP5pPJLi.png",
       "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Dystopian/Heterosexual/Robots\nThe world is on the verge of changing from an old fashioned society to a new world, due to issues such as gender, race and compliance along with technological innovations such as an evolving AI. Even in this world where black and white is now gray, we believe that “love” will always exist but in myriad forms and not just between people. This includes love between human and robot and its unique expression. The beauty of these emotions will be shown sometimes beautifully, sometimes brutally, and sometimes comically. How long can this love last? When a robot outlives its human partner, can their love hope to endure? <br><br>\n(Source: HIDIVE)"
+    },
+    {
+      "id": "tt36593047",
+      "type": "series",
+      "name": "Egao no Taenai Shokuba desu.",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173523-dXMn5evjma8K.png",
+      "description": "Genres: Comedy, Slice of Life\nTags:Female Protagonist/Primarily Female Cast/Cute Girls Doing Cute Things/Drawing/Yuri/Work/LGBTQ+ Themes\nNew shoujo manga artist Nana Futami works hard every day while being supported by Kaede Satou, her female editor who is older than her, and Mizuki Hazama, her assistant. According to the girl herself, she sometimes drums up intense daydream delusions of occupational illness! A working girls comedy set in the entertainment industry, brought to you by an author who always draws various girls. "
     },
     {
       "id": "tt35955429",
@@ -295,18 +295,18 @@
       "description": "Genres: Adventure, Sci-Fi, Slice of Life\nTags:Post-Apocalyptic/Female Protagonist/Travel/Motorcycles\nAll alone after the end of days, two girls bike through the empty ruins of Japan—and they're not about to let the collapse of civilization get in the way of sightseeing! Even when the world ends, their journey goes on.\n<br><br>\n(Source: Yen Press)"
     },
     {
-      "id": "tt13622982",
-      "type": "series",
-      "name": "Star Wars: Visions Volume 3",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184642-tIIbvVKE5KSW.jpg",
-      "description": "Genres: Action, Adventure, Sci-Fi\nTags:Anthology/Episodic/Space/Ensemble Cast\nThe critically-acclaimed series of animated shorts returns to Japan for a third installment in collaboration with nine anime studios.<br><br>\n\n1) <i>The Duel: Payback</i> (Mizuno Takanobu, Kamikaze Douga x Anima) <br>\n2) <i>The Lost Ones</i>  (Hitoshi Haga, Kinema Citrus) <br>\n3) <i>The Ninth Jedi: Child of Hope</i> (Naoyoshi Shiotani, Production I.G.) <br>\n4) <i>Yuko's Treasure</i> (Masaki Tachibana, Kinema Citrus)<br>\n5) <i>The Smuggler</i> (Masahiko Ootsuka, Trigger) <br>\n6) <i>The Bounty Hunters</i> (Junichi Yamamoto, Wit Studio) <br>\n7) <i>The Song of Four Wings</i> (Hiroyasu Kobayashi, Project Studio Q) <br>\n8) <i>Bird of Paradise</i> (Tadahiro Yoshihira, Polygon Pictures) <br>\n9) <i>Black</i> (Shinya Oohira, David Production) <br>"
-    },
-    {
       "id": "tt37431541",
       "type": "series",
       "name": "Sawaranaide Kotesashi-kun",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx187331-ylRHyvJIVPeO.jpg",
       "description": "Genres: Comedy, Ecchi, Romance, Sports\nTags:Nudity/Shounen/Female Harem/Male Protagonist/Medicine/School/Primarily Female Cast\nKotesashi Kouyou possesses outstanding skill as a masseur. He aspires to become a sports doctor and wants to get a scholarship in medical school. Starting spring, he attends the high school attached to Seiwa University, a sports powerhouse. Since his family is not wealthy, he has to work as a hostel manager, where he is also allowed to stay, to pay for his school expenses. There he encounters high school girl athletes with various problems. Kotesashi's job is to take care of them physically and mentally and be the hostel manager.<br><br>\n\n(Source: Kodansha, translated)"
+    },
+    {
+      "id": "tt13622982",
+      "type": "series",
+      "name": "Star Wars: Visions Volume 3",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184642-tIIbvVKE5KSW.jpg",
+      "description": "Genres: Action, Adventure, Sci-Fi\nTags:Anthology/Episodic/Space/Ensemble Cast\nThe critically-acclaimed series of animated shorts returns to Japan for a third installment in collaboration with nine anime studios.<br><br>\n\n1) <i>The Duel: Payback</i> (Mizuno Takanobu, Kamikaze Douga x Anima) <br>\n2) <i>The Lost Ones</i>  (Hitoshi Haga, Kinema Citrus) <br>\n3) <i>The Ninth Jedi: Child of Hope</i> (Naoyoshi Shiotani, Production I.G.) <br>\n4) <i>Yuko's Treasure</i> (Masaki Tachibana, Kinema Citrus)<br>\n5) <i>The Smuggler</i> (Masahiko Ootsuka, Trigger) <br>\n6) <i>The Bounty Hunters</i> (Junichi Yamamoto, Wit Studio) <br>\n7) <i>The Song of Four Wings</i> (Hiroyasu Kobayashi, Project Studio Q) <br>\n8) <i>Bird of Paradise</i> (Tadahiro Yoshihira, Polygon Pictures) <br>\n9) <i>Black</i> (Shinya Oohira, David Production) <br>"
     },
     {
       "id": "tt2404499",
@@ -347,7 +347,7 @@
       "id": "tt37815384",
       "type": "series",
       "name": "Plus-sized Misadventures in Love!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170936-YUQOhL8Gwi7M.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170936-NlDYAjV86ljm.png",
       "description": "Genres: Comedy, Drama, Romance\nTags:Office Lady/Shoujo/Female Protagonist/Primarily Adult Cast\n<i>\"This is the punishment for a fat, ugly girl like me falling in love with someone as beautiful as you...\" </i><br><br>\nYumeko had a mountain of complexes about herself. Then, a terrible accident befalls her. Though somehow saved from the brink of death, Yumeko wakes up a completely different person. <i>\"This is...me...?! I'm SO cute!!\"</i>Those around her can't hide their surprise and wonderment at this 180°change... But, Yumeko's new hyper-positive attitude starts to change her surroundings, too. Worries and complexes can affect anyone, and Yumeko will chop right through those of her various supporting characters!! In love, work, friendship... And an attempted murder case?! This frenzied romantic comedy will leave you bubbling with energy!<br>\n<br>\n(Source: Manga Plaza)"
     }
   ]
