--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -5,7 +5,7 @@
       "type": "series",
       "name": "One-Punch Man Season 3",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx153800-8SpzdHOaZCoU.jpg",
-      "description": "Genres: Action, Comedy, Sci-Fi, Supernatural\nTags:Superhero/Super Power/Parody/Satire/Surreal Comedy/Urban Fantasy/Slapstick/Male Protagonist/Cyborg/Kaiju/Seinen/Martial Arts\nThe third season of <i>One Punch Man</i>.<br><br>\nSaitama is a hero who only became a hero for fun. After three years of \"special training,\" he’s become so strong that he's practically invincible. In fact, he's too strong—even his mightiest opponents are taken out with a single punch. Alongside Genos, his faithful disciple, Saitama performs his official hero duties as a member of the Hero Association.<br><br>\nOne day, monsters claiming to be from the Monster Association suddenly appeared, taking a child of Hero Association executive hostage. The S-class heroes gather and plan a raid on the Monster Association hideout to rescue the hostage. Meanwhile, Garou, a \"human monster\" who was taken by the Monster Association during a battle with the heroes, awakens in the Monster Association hideout.<br><br>\n(Source: EMOTION Label YouTube Channel Description)<br><br>\n<i>Note: Excludes recap episode that aired a week before regular broadcast.</i>"
+      "description": "Genres: Action, Comedy, Sci-Fi, Supernatural\nTags:Superhero/Super Power/Surreal Comedy/Parody/Satire/Slapstick/Male Protagonist/Urban Fantasy/Cyborg/Kaiju/Seinen/Martial Arts\nThe third season of <i>One Punch Man</i>.<br><br>\nSaitama is a hero who only became a hero for fun. After three years of \"special training,\" he’s become so strong that he's practically invincible. In fact, he's too strong—even his mightiest opponents are taken out with a single punch. Alongside Genos, his faithful disciple, Saitama performs his official hero duties as a member of the Hero Association.<br><br>\nOne day, monsters claiming to be from the Monster Association suddenly appeared, taking a child of Hero Association executive hostage. The S-class heroes gather and plan a raid on the Monster Association hideout to rescue the hostage. Meanwhile, Garou, a \"human monster\" who was taken by the Monster Association during a battle with the heroes, awakens in the Monster Association hideout.<br><br>\n(Source: EMOTION Label YouTube Channel Description)<br><br>\n<i>Note: Excludes recap episode that aired a week before regular broadcast.</i>"
     },
     {
       "id": "tt29242849",
@@ -239,18 +239,18 @@
       "description": "Genres: Comedy, Slice of Life, Supernatural\nTags:Vampire/School/Male Protagonist/Female Protagonist/Kuudere/Heterosexual/Primarily Teen Cast\nLuna Ishikawa is a dark and mysterious vampire—or so she'd like her new classmates to believe. The truth is, while she may be one of the not-so-mythical bloodsuckers, she doesn't really live up to the hype. She's short and clumsy, and she can't even suck blood properly! So when her classmate Tatsuta Ootori discovers her little “drinking problem,” he can't help but lend a hand. Can he nurse Luna from the small, timid animal she is into a fearsome creature of the night?!\n<br><br>\n(Source: Yen Press)"
     },
     {
-      "id": "tt36987681",
-      "type": "series",
-      "name": "Taiyou yori mo Mabushii Hoshi",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186621-jFeAgDQkQMUm.jpg",
-      "description": "Genres: Romance\nTags:Shoujo/School/Heterosexual/Female Protagonist\nSae and Koki have been friends since childhood. One fateful day at the end of middle school, she has a revelation: Koki has grown up! Now they’re in high school, and she has another revelation: she has feelings for Koki! But Sae isn’t the only girl who does… The question is, who does Koki have feelings for?!<br><br>\n(Source: Viz)"
-    },
-    {
       "id": "tt36190100",
       "type": "series",
       "name": "Dusk Beyond the End of the World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195153-yiRxZP5pPJLi.png",
       "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Dystopian/Heterosexual/Robots\nThe world is on the verge of changing from an old fashioned society to a new world, due to issues such as gender, race and compliance along with technological innovations such as an evolving AI. Even in this world where black and white is now gray, we believe that “love” will always exist but in myriad forms and not just between people. This includes love between human and robot and its unique expression. The beauty of these emotions will be shown sometimes beautifully, sometimes brutally, and sometimes comically. How long can this love last? When a robot outlives its human partner, can their love hope to endure? <br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Includes Prologue.</i>"
+    },
+    {
+      "id": "tt36987681",
+      "type": "series",
+      "name": "Taiyou yori mo Mabushii Hoshi",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186621-jFeAgDQkQMUm.jpg",
+      "description": "Genres: Romance\nTags:Shoujo/School/Heterosexual/Female Protagonist\nSae and Koki have been friends since childhood. One fateful day at the end of middle school, she has a revelation: Koki has grown up! Now they’re in high school, and she has another revelation: she has feelings for Koki! But Sae isn’t the only girl who does… The question is, who does Koki have feelings for?!<br><br>\n(Source: Viz)"
     },
     {
       "id": "tt37430949",
