--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -124,7 +124,7 @@
       "type": "series",
       "name": "Chitose Is in the Ramune Bottle",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180082-IZAlf06G2VVm.png",
-      "description": "Genres: Comedy, Romance\nTags:Female Harem/School/Coming of Age/Male Protagonist/Baseball/Rural/Basketball/Primarily Teen Cast/Primarily Female Cast\nBeing popular isn’t easy. It’s hard to beat Saku Chitose. The most popular kid in his high school? Check. An ironclad reputation that can weather even vicious online attacks? Check. A group of friends as attractive on the outside as they are inside? Check. But when a teacher asks for his help bringing back a student who has been shut away in his room for months, Saku’s perfect world will never be the same. What is this, some kind of normie harem story...?<br>\n<br>\n(Source: Yen Press) "
+      "description": "Genres: Comedy, Romance\nTags:Female Harem/School/Coming of Age/Male Protagonist/Rural/Baseball/Primarily Teen Cast/Basketball/Primarily Female Cast\nBeing popular isn’t easy. It’s hard to beat Saku Chitose. The most popular kid in his high school? Check. An ironclad reputation that can weather even vicious online attacks? Check. A group of friends as attractive on the outside as they are inside? Check. But when a teacher asks for his help bringing back a student who has been shut away in his room for months, Saku’s perfect world will never be the same. What is this, some kind of normie harem story...?<br>\n<br>\n(Source: Yen Press) "
     },
     {
       "id": "tt37679127",
@@ -194,7 +194,7 @@
       "type": "series",
       "name": "Otherworldly Munchkin: Let's Speedrun the Dungeon with Only 1 HP!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183960-qvkHfCrO6cAq.jpg",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Shounen/Male Protagonist/Board Game/Dungeon/Anti-Hero/Full CGI/Isekai/Magic/Female Harem/Elf/Swordplay\n16-year-old Yukito Kirihara lives with his 14-year-old sister Sana, who he treasures more than anyone else. But when an ogre shows up outside of his window looking for Sana (a shocking event in its own right), Yukito leaps to save her—and is killed. He's offered the promise of reincarnation by a mysterious woman, who gives him a character sheet in a mysterious book. But when Yukito sees Sana in there, too, he sets off to find her, and save them both—even if he only has 1 hp with which to do it!<br>\n<br>\n(Source: Kodansha USA)"
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Shounen/Male Protagonist/Full CGI/Board Game/Dungeon/Anti-Hero/Isekai/Magic/Female Harem/Elf/Swordplay\n16-year-old Yukito Kirihara lives with his 14-year-old sister Sana, who he treasures more than anyone else. But when an ogre shows up outside of his window looking for Sana (a shocking event in its own right), Yukito leaps to save her—and is killed. He's offered the promise of reincarnation by a mysterious woman, who gives him a character sheet in a mysterious book. But when Yukito sees Sana in there, too, he sets off to find her, and save them both—even if he only has 1 hp with which to do it!<br>\n<br>\n(Source: Kodansha USA)"
     },
     {
       "id": "tt38037460",
@@ -239,18 +239,18 @@
       "description": "Genres: Comedy, Slice of Life, Supernatural\nTags:Vampire/School/Male Protagonist/Female Protagonist/Kuudere/Heterosexual/Primarily Teen Cast\nLuna Ishikawa is a dark and mysterious vampire—or so she'd like her new classmates to believe. The truth is, while she may be one of the not-so-mythical bloodsuckers, she doesn't really live up to the hype. She's short and clumsy, and she can't even suck blood properly! So when her classmate Tatsuta Ootori discovers her little “drinking problem,” he can't help but lend a hand. Can he nurse Luna from the small, timid animal she is into a fearsome creature of the night?!\n<br><br>\n(Source: Yen Press)"
     },
     {
-      "id": "tt36987681",
-      "type": "series",
-      "name": "Taiyou yori mo Mabushii Hoshi",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186621-jFeAgDQkQMUm.jpg",
-      "description": "Genres: Romance\nTags:Shoujo/School/Heterosexual/Female Protagonist\nSae and Koki have been friends since childhood. One fateful day at the end of middle school, she has a revelation: Koki has grown up! Now they’re in high school, and she has another revelation: she has feelings for Koki! But Sae isn’t the only girl who does… The question is, who does Koki have feelings for?!<br><br>\n(Source: Viz)"
-    },
-    {
       "id": "tt36912922",
       "type": "series",
       "name": "Mechanical Marie",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179992-tu21efjGADCO.png",
       "description": "Genres: Action, Comedy, Romance, Sci-Fi\nTags:Female Protagonist/Shoujo/Maids/Slapstick/Robots\n<i> “At last, she’s complete. This is Marie, a robot maid.”</i>\n<br><br>\nMarie, a former legendary martial artist, now conceals her identity as a human and starts working as a “robot” in the mansion of Arthur, heir to a conglomerate that despises humans. Her human identity must remain hidden—because one slip-up and she’s dead! Her naturally emotionless demeanor helps her maintain her “robot” disguise and flawlessly perform her duties, all while struggling to protect Arthur from assassins sent to take his life. She lives each day on the edge with her heart racing, because Arthur is head over heels for Marie, and her human identity is nearly exposed!<br><br>\n\nA maid pretending to be a robot x A young heir who hates humans. Get ready for a heartwarming comedy that’ll make you laugh and cry! What began as a lie between master and maid blossoms into a love neither of them saw coming.<br><br>\n\n(Source: Crunchyroll) "
+    },
+    {
+      "id": "tt36987681",
+      "type": "series",
+      "name": "Taiyou yori mo Mabushii Hoshi",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186621-jFeAgDQkQMUm.jpg",
+      "description": "Genres: Romance\nTags:Shoujo/School/Heterosexual/Female Protagonist\nSae and Koki have been friends since childhood. One fateful day at the end of middle school, she has a revelation: Koki has grown up! Now they’re in high school, and she has another revelation: she has feelings for Koki! But Sae isn’t the only girl who does… The question is, who does Koki have feelings for?!<br><br>\n(Source: Viz)"
     },
     {
       "id": "tt37430949",
@@ -264,7 +264,7 @@
       "type": "series",
       "name": "With You, Our Love Will Make It Through",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186161-rgdRQgwOJUpb.png",
-      "description": "Genres: Drama, Fantasy, Romance\nTags:Shoujo/Anthropomorphism/Heterosexual/Female Protagonist/School/Kemonomimi\nWhen high schooler Mari bumps into a fellow tardy student, she's surprised to find out he's a beastfolk who's to attend her school! After all, it's not rare for beastfolk to coexist alongside humans, but it's still uncommon, with the prejudice and all. Nervous to meet one at first, Mari soon learns there's more to him than his furry exterior. In fact, the more she gets to know him, the more she finds herself drawn to him, his steadfastness, his kindheartedness, and…his body…\n<BR><BR>\n(Source: Yen Press)"
+      "description": "Genres: Drama, Fantasy, Romance\nTags:Shoujo/Anthropomorphism/Heterosexual/Female Protagonist/School/Kemonomimi/CGI\nWhen high schooler Mari bumps into a fellow tardy student, she's surprised to find out he's a beastfolk who's to attend her school! After all, it's not rare for beastfolk to coexist alongside humans, but it's still uncommon, with the prejudice and all. Nervous to meet one at first, Mari soon learns there's more to him than his furry exterior. In fact, the more she gets to know him, the more she finds herself drawn to him, his steadfastness, his kindheartedness, and…his body…\n<BR><BR>\n(Source: Yen Press)"
     },
     {
       "id": "tt32779175",
@@ -295,9 +295,9 @@
       "description": "Genres: Comedy, Ecchi, Romance, Sports\nTags:Nudity/Shounen/Female Harem/Male Protagonist/Medicine/School/Primarily Female Cast\nKotesashi Kouyou possesses outstanding skill as a masseur. He aspires to become a sports doctor and wants to get a scholarship in medical school. Starting spring, he attends the high school attached to Seiwa University, a sports powerhouse. Since his family is not wealthy, he has to work as a hostel manager, where he is also allowed to stay, to pay for his school expenses. There he encounters high school girl athletes with various problems. Kotesashi's job is to take care of them physically and mentally and be the hostel manager.<br><br>\n\n(Source: Kodansha, translated)"
     },
     {
-      "id": "tt35955429",
+      "id": "tt37546327",
       "type": "series",
-      "name": "Shuumatsu Touring",
+      "name": "Touring After the Apocalypse",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186920-nrYITcE4TEuk.jpg",
       "description": "Genres: Adventure, Sci-Fi, Slice of Life\nTags:Post-Apocalyptic/Female Protagonist/Travel/Motorcycles/Iyashikei\nAll alone after the end of days, two girls bike through the empty ruins of Japan—and they're not about to let the collapse of civilization get in the way of sightseeing! Even when the world ends, their journey goes on.\n<br><br>\n(Source: Yen Press)"
     },
@@ -319,8 +319,8 @@
       "id": "tt34852231",
       "type": "series",
       "name": "Gnosia",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185116-zAkGuitojfbN.jpg",
-      "description": "Genres: Drama, Mystery, Sci-Fi\nTags:Aliens/Space/Survival/LGBTQ+ Themes/Transgender/Primarily Adult Cast/Agender/Amnesia\nThe Gnosia lie. Pretending to be human, they’ll get in close, trick and deceive, and then eliminate one victim at a time...\n<br><br>\nThe crew of a drifting spaceship, facing off against a mysterious and deadly threat known as the “Gnosia” and having no idea who among them is really the enemy, formulate a desperate plan for survival. The most suspicious among them will be put into “cold sleep” one by one, in an effort to rid the ship of Gnosia.<br><br>\n(Source: GNOSIA Steam Page)"
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185116-OwbfLeI4djRx.jpg",
+      "description": "Genres: Drama, Mystery, Sci-Fi\nTags:Aliens/Survival/Space/Agender/LGBTQ+ Themes/Transgender/Primarily Adult Cast/Amnesia\nThe Gnosia lie. Pretending to be human, they’ll get in close, trick and deceive, and then eliminate one victim at a time...\n<br><br>\nThe crew of a drifting spaceship, facing off against a mysterious and deadly threat known as the “Gnosia” and having no idea who among them is really the enemy, formulate a desperate plan for survival. The most suspicious among them will be put into “cold sleep” one by one, in an effort to rid the ship of Gnosia.<br><br>\n(Source: GNOSIA Steam Page)"
     },
     {
       "id": "tt37532040",
