Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -194,7 +194,7 @@
       "type": "series",
       "name": "Pass the Monster Meat, Milady!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183291-RHLPdeftGxeQ.jpg",
-      "description": "Genres: Fantasy, Romance\nTags:Shoujo/Female Protagonist/Royal Affairs/Food\nLike any proper noble lady, one must have certain acquired tastes. For Melphiera Marchalrayd, she just happens to crave a rather exotic protein—monsters! But do not judge! Despite its bad reputation, monster meat can be used in exquisite cuisine and Melphiera is determined to change the kingdom’s opinion of it! Unfortunately, since debuting in society, Melphiera has been struggling to find her perfect match…until she meets the fearless “Blood-Mad Duke” of Galbraith!\n<br><br>\n(Source: Kodansha USA)"
+      "description": "Genres: Fantasy, Romance\nTags:Female Protagonist/Shoujo/Royal Affairs/Food\nLike any proper noble lady, one must have certain acquired tastes. For Melphiera Marchalrayd, she just happens to crave a rather exotic protein—monsters! But do not judge! Despite its bad reputation, monster meat can be used in exquisite cuisine and Melphiera is determined to change the kingdom’s opinion of it! Unfortunately, since debuting in society, Melphiera has been struggling to find her perfect match…until she meets the fearless “Blood-Mad Duke” of Galbraith!\n<br><br>\n(Source: Kodansha USA)"
     },
     {
       "id": "tt36631539",
@@ -204,18 +204,18 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Dungeon/Male Protagonist\n\"This party does not need a useless magician who can only use support magic. You are fired, Alec Huguette.\"\n<BR><BR>\nOne day, Alec, a court magician who had been chaperoning the Crown Prince's dungeon-crawling party, was suddenly fired and banished from the court by the prince. The only one who reached out to him is Yoruha, his former party member from their Academy of Magic days, that had split up four years ago. \n<BR><BR>\n\"Hey Alec— would you like to come explore dungeons with us again?\"\n<BR><BR>\nThus the legendary \"Lasting Period\" party was revived, and the name will soon became known all over the world once again.\n<BR><BR>\n(Source: Lanove Bunko, translated)"
     },
     {
-      "id": "tt36132068",
-      "type": "series",
-      "name": "Yano-kun no Futsuu no Hibi",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183965-7oMzkJp4FUyP.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Seinen/School/Primarily Teen Cast/Heterosexual\nYoshida is the chairman of the class and she is always worried. Her biggest worry these days is that Yano, who is in her class, comes to school every day with a serious injury. She can't take her eyes off Yano, who is injured in every possible way! She can't wait to help him!\n<br><br>\nA love comedy about a boy who is covered in injuries and a girl who worries too much!\n<br><br>\n(Source: Comic Days, translated)"
-    },
-    {
       "id": "tt36190100",
       "type": "series",
       "name": "Dusk Beyond the End of the World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx195153-yiRxZP5pPJLi.png",
       "description": "Genres: Action, Drama, Romance, Sci-Fi\nTags:Dystopian/Heterosexual/Robots\nThe world is on the verge of changing from an old fashioned society to a new world, due to issues such as gender, race and compliance along with technological innovations such as an evolving AI. Even in this world where black and white is now gray, we believe that “love” will always exist but in myriad forms and not just between people. This includes love between human and robot and its unique expression. The beauty of these emotions will be shown sometimes beautifully, sometimes brutally, and sometimes comically. How long can this love last? When a robot outlives its human partner, can their love hope to endure? <br><br>\n(Source: HIDIVE)\n<br><br>\n<i>Note: Includes Prologue.</i>"
+    },
+    {
+      "id": "tt36132068",
+      "type": "series",
+      "name": "Yano-kun no Futsuu no Hibi",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183965-7oMzkJp4FUyP.jpg",
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Seinen/School/Primarily Teen Cast/Heterosexual\nYoshida is the chairman of the class and she is always worried. Her biggest worry these days is that Yano, who is in her class, comes to school every day with a serious injury. She can't take her eyes off Yano, who is injured in every possible way! She can't wait to help him!\n<br><br>\nA love comedy about a boy who is covered in injuries and a girl who worries too much!\n<br><br>\n(Source: Comic Days, translated)"
     },
     {
       "id": "tt37499375",
@@ -306,7 +306,7 @@
       "type": "series",
       "name": "Gnosia",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185116-OwbfLeI4djRx.jpg",
-      "description": "Genres: Drama, Mystery, Sci-Fi\nTags:Aliens/Survival/Space/Agender/LGBTQ+ Themes/Transgender/Primarily Adult Cast/Amnesia\nThe Gnosia lie. Pretending to be human, they’ll get in close, trick and deceive, and then eliminate one victim at a time...\n<br><br>\nThe crew of a drifting spaceship, facing off against a mysterious and deadly threat known as the “Gnosia” and having no idea who among them is really the enemy, formulate a desperate plan for survival. The most suspicious among them will be put into “cold sleep” one by one, in an effort to rid the ship of Gnosia.<br><br>\n(Source: GNOSIA Steam Page)"
+      "description": "Genres: Drama, Mystery, Sci-Fi\nTags:Aliens/Survival/LGBTQ+ Themes/Space/Agender/Transgender/Primarily Adult Cast/Amnesia\nThe Gnosia lie. Pretending to be human, they’ll get in close, trick and deceive, and then eliminate one victim at a time...\n<br><br>\nThe crew of a drifting spaceship, facing off against a mysterious and deadly threat known as the “Gnosia” and having no idea who among them is really the enemy, formulate a desperate plan for survival. The most suspicious among them will be put into “cold sleep” one by one, in an effort to rid the ship of Gnosia.<br><br>\n(Source: GNOSIA Steam Page)"
     },
     {
       "id": "tt2404499",
